# libjson-rpc

./: .gitignore  CMakeLists.txt  README.md  ivpm.yaml  setup.py
python/: core.pyx
python/libjson_rpc/: __init__.py  core.pxd  decl.pxd
src/: BaseMessageTransport.cpp  BaseMessageTransport.h  CMakeLists.txt  EventLoop.cpp  EventLoop.h  Factory.cpp  Factory.h  IRegisterMethod.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageRequestResponseStream.cpp  MessageRequestResponseStream.h  NBSocketMessageTransport.cpp  NBSocketMessageTransport.h  NBSocketServerMessageDispatcher.cpp  NBSocketServerMessageDispatcher.h  ReqMsg.cpp  ReqMsg.h  RspMsg.cpp  RspMsg.h  Semaphore.cpp  Semaphore.h  SocketMessageTransport.cpp  SocketMessageTransport.h  StdioMessageTransport.cpp  StdioMessageTransport.h  TaskGroup.cpp  TaskGroup.h  TaskQueue.cpp  TaskQueue.h
src/include/jrpc/: FactoryExt.h  IEventLoop.h  IFactory.h  IMessageDispatcher.h  IMessageRequestResponseStream.h  IMessageTransport.h  IReqMsg.h  IRspMsg.h  ISemaphore.h  ITask.h  ITaskDone.h  ITaskGroup.h  ITaskParent.h  ITaskQueue.h  ITaskQueueWorker.h  ITaskScheduler.h  ITaskStack.h
src/include/jrpc/impl/: JsonUtil.h  LockRw.h  LockRwData.h  LockRwValid.h  TaskBase.h  TaskGroup.h  TaskLambda.h  TaskLockRead.h  TaskLockReadData.h  TaskLockReadValid.h  TaskLockWrite.h  TaskLockWriteValid.h  TaskRunTasklist.h  TaskSemWait.h
tests/: CMakeLists.txt
tests/src/: NonBlockingIO.cpp  NonBlockingIO.h  TestBase.cpp  TestBase.h  TestDispatcher.cpp  TestDispatcher.h  TestSemaphore.cpp  TestSemaphore.h  TestTaskBasics.cpp  TestTaskBasics.h  TestTaskGroupBasics.cpp  TestTaskGroupBasics.h
